// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customers should render component when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Customers
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Customer Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="agencyCloudId"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Customer Code
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Customers
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Customer Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="agencyCloudId"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Customer Code
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Customers should render component with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Customers
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="name"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Customer Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="agencyCloudId"
                  type="search"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Customer Code
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="false"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Customer Name
            </div>
            <div
              class="el-table-header"
            >
              Agency Cloud Id
            </div>
            <div
              class="el-table-header"
            >
              Customer Id
            </div>
            <div
              class="el-table-header"
            >
              Customer Billing Reference
            </div>
            <div
              class="el-table-header"
            >
              Customer Address
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 20H11V4H20V16.264V20Z"
                      fill="#7BC9EB"
                    />
                    <path
                      d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                      fill="#0061A8"
                    />
                    <path
                      d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                      fill="#F3FFFB"
                    />
                    <path
                      d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                      fill="#F3FFFB"
                    />
                    <path
                      d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                      fill="#F3FFFB"
                    />
                    <path
                      d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                      fill="#F3FFFB"
                    />
                    <path
                      d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                      fill="#F3FFFB"
                    />
                    <path
                      d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                      fill="#F3FFFB"
                    />
                    <path
                      d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                      fill="#F3FFFB"
                    />
                    <path
                      d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                      fill="#F3FFFB"
                    />
                    <path
                      d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                      fill="#23A4DE"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Name"
                >
                  Reapit Sales
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Agency Cloud Id"
                >
                  RES
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Id"
                >
                  201a8d35-f682-41a8-95ed-079133e4b517
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Billing Reference"
                >
                  HJP000
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Address"
                >
                  5 Radcliffe House Blenheim Court Solihull solihull B91 2AA
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 6L9 0V12L0 6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6L3 12V0L12 6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Customers
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Customer Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="agencyCloudId"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Customer Code
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="false"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Customer Name
          </div>
          <div
            class="el-table-header"
          >
            Agency Cloud Id
          </div>
          <div
            class="el-table-header"
          >
            Customer Id
          </div>
          <div
            class="el-table-header"
          >
            Customer Billing Reference
          </div>
          <div
            class="el-table-header"
          >
            Customer Address
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 20H11V4H20V16.264V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                    fill="#23A4DE"
                  />
                </svg>
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Agency Cloud Id"
              >
                RES
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Id"
              >
                201a8d35-f682-41a8-95ed-079133e4b517
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Billing Reference"
              >
                HJP000
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                5 Radcliffe House Blenheim Court Solihull solihull B91 2AA
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 6L9 0V12L0 6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6L3 12V0L12 6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
